--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>Merwin.Asm</title>
-  <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/85914469?s=55&v=4">
+  <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/85914469?s=55&v=4" radius=30>
   
 </head>
 
