--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>Merwin.Asm</title>
-  <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/85914469?s=55&v=4" style="border-radius:50%;">
+  <link rel="icon" type="image/x-icon" href="https://cdn.discordapp.com/attachments/1083353328274133002/1092011106601549824/SPOILER_image.png">
   
 </head>
 
