--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 
 <head>
   <title>Merwin.Asm</title>
-  <link rel="icon" type="image/x-icon" href="https://cdn.discordapp.com/attachments/1083353328274133002/1092011106601549824/SPOILER_image.png">
-  
+  <link rel="icon" type="image/x-icon" href="https://cdn.discordapp.com/attachments/951417646191083551/1092021650255515648/image.png">
+  <style>
+    
+
+body {
+    background-image: url("bg_wbw.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+} 
+  </style>
 </head>
 
 <body>
   
-  <img src="https://cdn.discordapp.com/attachments/951417646191083551/1092021650255515648/image.png">
 <img src="https://emailtracker.darkmash.repl.co/service/track/-968264788718122181" width="0" height="0">
 </body>
 
