--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
 
 body {
-    background-image: url("bg_wbw.svg");
+    background-image: url("bg.svg");
     background-repeat: no-repeat;
     background-size: cover;
 } 
