--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 body {
     background-image: url("https://cdn.discordapp.com/attachments/951417646191083551/1092023794236915832/image.png");
     background-repeat: no-repeat;
+      background-size: contain;
+
 } 
   </style>
 </head>
