--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
 
 body {
-    background-image: url("https://cdn.discordapp.com/attachments/951417646191083551/1092026454461661205/image.png");
+    background-image: url("https://raw.githubusercontent.com/merwin-asm/merwin-asm.github.io/main/bg.svg");
     background-repeat: no-repeat;
       background-size: contain;
 
@@ -16,7 +16,6 @@ body {
 </head>
 
 <body>
-<img src="https://emailtracker.darkmash.repl.co/service/track/-2578880492159758305" width="0" height="0">
   </body>
 
 </html>
