--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     
 
 body {
-    background-image: url("https://raw.githubusercontent.com/merwin-asm/merwin-asm.github.io/main/bg.svg");
+    background-image: url("https://cdn.discordapp.com/attachments/951417646191083551/1092026454461661205/image.png?ex=6624e463&is=66126f63&hm=f9abee0c802eb143fc774ce45364c165ebecdd296face34d223ba97393612879&");
     background-repeat: no-repeat;
       background-size: contain;
 
